Fixed layout issue based on feedback

--- a/less/_variables.less
+++ b/less/_variables.less
@@ -138,7 +138,7 @@
 @card-panel-bordered-h3-font-size: 22px;
 @card-panel-bordered-h3-font-weight: 600;
 @card-panel-bordered-h3-color: @brand-primary;
-@card-panel-body-padding: 30px;
+@card-panel-body-padding: 0;
 
 @card-panel-bordered-link-color: @brand-secondary;
 @card-panel-bordered-link-font-family: @font-family-heading;
